<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:padding="32dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gd_line_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".1"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gd_line_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".3"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gd_line_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".75"/>

    <TextView
        android:id="@+id/title_page_buy_ticket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:textStyle="bold"
        android:text="@string/pemesanan_tiket_kereta"
        app:layout_constraintTop_toBottomOf="@id/gd_line_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_username_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/gd_line_2"
        app:startIconDrawable="@drawable/baseline_person"
        app:endIconMode="clear_text"
        android:hint="@string/nama_pemesan">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:paddingStart="50dp"
            android:layout_height="wrap_content"
            android:shadowColor="@color/black"
            android:background="@drawable/input_style"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_hour_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/jam_keberangkatan"
        app:startIconDrawable="@drawable/baseline_access_time"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@id/input_username_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:paddingStart="50dp"
            android:background="@drawable/input_style"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_date_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/pilih_tanggal_keberangkatan"
        app:layout_constraintTop_toBottomOf="@id/input_hour_layout"
        app:startIconDrawable="@drawable/baseline_date_range"
        app:endIconMode="clear_text"
        app:hintTextAppearance="@style/HintTextStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="50dp"
            android:focusable="false"
            android:background="@drawable/input_style"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/input_destination"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:spinnerMode="dropdown"
        android:background="@drawable/input_style"
        app:layout_constraintTop_toBottomOf="@id/input_date_layout"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_pesan_tiket"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/pesan_tiket"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:letterSpacing=".05"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/blue"
        app:layout_constraintTop_toBottomOf="@id/gd_line_3"/>

</androidx.constraintlayout.widget.ConstraintLayout>