<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".SecondActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/titleSuccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/berhasil_mendapatkan"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="70dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/img_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_check_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleSuccess"
        android:layout_marginTop="25dp"/>

    <TextView
        android:id="@+id/label_nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_success"
        android:text="@string/nama"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/font"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp" />

    <TextView
        android:id="@+id/label_jam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_nama"
        android:text="@string/jam"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/font"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp" />

    <TextView
        android:id="@+id/label_tgl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_jam"
        android:text="@string/tanggal"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/font"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp" />

    <TextView
        android:id="@+id/label_tujuan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_tgl"
        android:text="@string/tujuan"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/font"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp" />

    <!--    hasil input  -->
    <TextView
        android:id="@+id/txt_nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/center"
        app:layout_constraintBottom_toBottomOf="@id/label_nama"
        android:text=": Nama"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/font" />

    <TextView
        android:id="@+id/txt_jam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/center"
        app:layout_constraintBottom_toBottomOf="@id/label_jam"
        android:text=": Jam"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/font"/>

    <TextView
        android:id="@+id/txt_tgl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/center"
        app:layout_constraintBottom_toBottomOf="@id/label_tgl"
        android:text=": Tanggal"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/font"/>

    <TextView
        android:id="@+id/txt_tujuan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/center"
        app:layout_constraintBottom_toBottomOf="@id/label_tujuan"
        android:text=": Tujuan"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/font"/>

</androidx.constraintlayout.widget.ConstraintLayout>